# osyris

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  test.lsp
docs/: stdlib.md
highlights/: osyris.vim
scripts/: docgen.py  doctest.py
src/: ast.rs  bstring.rs  dotlib.rs  eval.rs  importlib.rs  iolib.rs  lib.rs  main.rs  parse.rs  stdlib.rs
tests/: dict.os  doctest-stdlib.os  fib.os  list.os  scope.os  tests.os
vim-osyris/ftdetect/: osyris.vim
vim-osyris/indent/: osyris.vim
vim-osyris/syntax/: osyris.vim
