[package]
name = "osyris"
description = "A highly embeddable LISP-like language with no depedencies"
homepage = "https://github.com/mortie/osyris"
repository = "https://github.com/mortie/osyris"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["lisp", "language"]
catgories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
